# server/docs/swagger.json
@@ -318,6 +318,50 @@
                 }
             }
         },
+        "/places/address": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "places"
+                ],
+                "summary": "Get address by location",
+                "parameters": [
+                    {
+                        "description": "Location",
+                        "name": "location",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.Coordinate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Place",
+                        "schema": {
+                            "$ref": "#/definitions/place.addressResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/places/id/{id}": {
             "get": {
                 "security": [
@@ -977,6 +1021,14 @@
                     "type": "integer"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "place.addressResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
                     "type": "string"
                 }
             }
